--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "FreeKiosk",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/slider": "^5.1.1",
     "@react-native/new-app-screen": "0.82.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
     "@react-navigation/stack": "^7.4.10",
     "react": "19.1.1",
     "react-native": "0.82.0",
+    "react-native-brightness-newarch": "^1.0.1",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
