--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "FreeKiosk",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -13,6 +13,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/slider": "^5.1.1",
+    "@react-native-cookies/cookies": "^6.2.1",
+    "@react-native-picker/picker": "^2.11.4",
     "@react-native/new-app-screen": "0.82.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
@@ -20,9 +22,12 @@
     "react": "19.1.1",
     "react-native": "0.82.0",
     "react-native-brightness-newarch": "^1.0.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-keychain": "^10.0.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
+    "react-native-vision-camera": "^4.7.3",
     "react-native-webview": "^13.16.0"
   },
   "devDependencies": {
@@ -41,6 +46,7 @@
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "patch-package": "^8.0.1",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.1",
     "typescript": "^5.8.3"
